# pb/service_vaultguard_api.pb.go
@@ -27,33 +27,38 @@ var File_service_vaultguard_api_proto protoreflect.FileDescriptor
 const file_service_vaultguard_api_proto_rawDesc = "" +
 	"\n" +
 	"\x1cservice_vaultguard_api.proto\x12\x02pb\x1a\x1cgoogle/api/annotations.proto\x1a.protoc-gen-openapiv2/options/annotations.proto\x1a\n" +
-	"user.proto2\x87\b\n" +
+	"user.proto\x1a\x16rpc_verify_email.proto2\x99\t\n" +
 	"\rVaultguardAPI\x12\xc9\x02\n" +
 	"\n" +
 	"CreateUser\x12\x15.pb.CreateUserRequest\x1a\x16.pb.CreateUserResponse\"\x8b\x02\x92A\xed\x01\x12\x19Create a new user account\x1a\xcf\x01Creates a new user account in the VaultGuard system. This endpoint validates user input, securely hashes passwords, and stores user credentials in the database. Returns user details upon successful creation.\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/create_user\x12\xd7\x02\n" +
 	"\n" +
 	"UpdateUser\x12\x15.pb.UpdateUserRequest\x1a\x16.pb.UpdateUserResponse\"\x99\x02\x92A\xfb\x01\x12\x14Updates user account\x1a\xe2\x01Updates user account in the VaultGuard system. This endpoint validates user input, securely hashes passwords if provided, and updates user credentials in the database. Returns updated user details upon successful modification.\x82\xd3\xe4\x93\x02\x14:\x01*2\x0f/v1/update_user\x12\xcf\x02\n" +
-	"\tLoginUser\x12\x14.pb.LoginUserRequest\x1a\x15.pb.LoginUserResponse\"\x94\x02\x92A\xf7\x01\x12\x17Authenticate user login\x1a\xdb\x01Authenticates a user with their credentials and returns access tokens. This endpoint validates username/email and password, generates JWT tokens for session management, and provides secure access to protected resources.\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0e/v1/login_userB\xe3\x01\x92A\xb5\x01\x12\x8a\x01\n" +
+	"\tLoginUser\x12\x14.pb.LoginUserRequest\x1a\x15.pb.LoginUserResponse\"\x94\x02\x92A\xf7\x01\x12\x17Authenticate user login\x1a\xdb\x01Authenticates a user with their credentials and returns access tokens. This endpoint validates username/email and password, generates JWT tokens for session management, and provides secure access to protected resources.\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0e/v1/login_user\x12\x8f\x01\n" +
+	"\vVerifyEmail\x12\x16.pb.VerifyEmailRequest\x1a\x17.pb.VerifyEmailResponse\"O\x92A4\x12\fVerify Email\x1a$Use this API to verify email address\x82\xd3\xe4\x93\x02\x12\x12\x10/v1/verify_emailB\xe3\x01\x92A\xb5\x01\x12\x8a\x01\n" +
 	"\x0eVaultGuard API\x12\x1dA secure vault management API\"T\n" +
 	"\bOm Singh\x12-https://github.com/OmSingh2003/VaultGuard-API\x1a\x19omsingh.ailearn@gmail.com2\x031.2*\x02\x02\x012\x10application/json:\x10application/jsonZ(github.com/OmSingh2003/vaultguard-api/pbb\x06proto3"
 
 var file_service_vaultguard_api_proto_goTypes = []any{
-	(*CreateUserRequest)(nil),  // 0: pb.CreateUserRequest
-	(*UpdateUserRequest)(nil),  // 1: pb.UpdateUserRequest
-	(*LoginUserRequest)(nil),   // 2: pb.LoginUserRequest
-	(*CreateUserResponse)(nil), // 3: pb.CreateUserResponse
-	(*UpdateUserResponse)(nil), // 4: pb.UpdateUserResponse
-	(*LoginUserResponse)(nil),  // 5: pb.LoginUserResponse
+	(*CreateUserRequest)(nil),   // 0: pb.CreateUserRequest
+	(*UpdateUserRequest)(nil),   // 1: pb.UpdateUserRequest
+	(*LoginUserRequest)(nil),    // 2: pb.LoginUserRequest
+	(*VerifyEmailRequest)(nil),  // 3: pb.VerifyEmailRequest
+	(*CreateUserResponse)(nil),  // 4: pb.CreateUserResponse
+	(*UpdateUserResponse)(nil),  // 5: pb.UpdateUserResponse
+	(*LoginUserResponse)(nil),   // 6: pb.LoginUserResponse
+	(*VerifyEmailResponse)(nil), // 7: pb.VerifyEmailResponse
 }
 var file_service_vaultguard_api_proto_depIdxs = []int32{
 	0, // 0: pb.VaultguardAPI.CreateUser:input_type -> pb.CreateUserRequest
 	1, // 1: pb.VaultguardAPI.UpdateUser:input_type -> pb.UpdateUserRequest
 	2, // 2: pb.VaultguardAPI.LoginUser:input_type -> pb.LoginUserRequest
-	3, // 3: pb.VaultguardAPI.CreateUser:output_type -> pb.CreateUserResponse
-	4, // 4: pb.VaultguardAPI.UpdateUser:output_type -> pb.UpdateUserResponse
-	5, // 5: pb.VaultguardAPI.LoginUser:output_type -> pb.LoginUserResponse
-	3, // [3:6] is the sub-list for method output_type
-	0, // [0:3] is the sub-list for method input_type
+	3, // 3: pb.VaultguardAPI.VerifyEmail:input_type -> pb.VerifyEmailRequest
+	4, // 4: pb.VaultguardAPI.CreateUser:output_type -> pb.CreateUserResponse
+	5, // 5: pb.VaultguardAPI.UpdateUser:output_type -> pb.UpdateUserResponse
+	6, // 6: pb.VaultguardAPI.LoginUser:output_type -> pb.LoginUserResponse
+	7, // 7: pb.VaultguardAPI.VerifyEmail:output_type -> pb.VerifyEmailResponse
+	4, // [4:8] is the sub-list for method output_type
+	0, // [0:4] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -65,6 +70,7 @@ func file_service_vaultguard_api_proto_init() {
 		return
 	}
 	file_user_proto_init()
+	file_rpc_verify_email_proto_init()
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
