# pb/service_vaultguard_api_grpc.pb.go
@@ -19,9 +19,10 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	VaultguardAPI_CreateUser_FullMethodName = "/pb.VaultguardAPI/CreateUser"
-	VaultguardAPI_UpdateUser_FullMethodName = "/pb.VaultguardAPI/UpdateUser"
-	VaultguardAPI_LoginUser_FullMethodName  = "/pb.VaultguardAPI/LoginUser"
+	VaultguardAPI_CreateUser_FullMethodName  = "/pb.VaultguardAPI/CreateUser"
+	VaultguardAPI_UpdateUser_FullMethodName  = "/pb.VaultguardAPI/UpdateUser"
+	VaultguardAPI_LoginUser_FullMethodName   = "/pb.VaultguardAPI/LoginUser"
+	VaultguardAPI_VerifyEmail_FullMethodName = "/pb.VaultguardAPI/VerifyEmail"
 )
 
 // VaultguardAPIClient is the client API for VaultguardAPI service.
@@ -31,6 +32,7 @@ type VaultguardAPIClient interface {
 	CreateUser(ctx context.Context, in *CreateUserRequest, opts ...grpc.CallOption) (*CreateUserResponse, error)
 	UpdateUser(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*UpdateUserResponse, error)
 	LoginUser(ctx context.Context, in *LoginUserRequest, opts ...grpc.CallOption) (*LoginUserResponse, error)
+	VerifyEmail(ctx context.Context, in *VerifyEmailRequest, opts ...grpc.CallOption) (*VerifyEmailResponse, error)
 }
 
 type vaultguardAPIClient struct {
@@ -71,6 +73,16 @@ func (c *vaultguardAPIClient) LoginUser(ctx context.Context, in *LoginUserReques
 	return out, nil
 }
 
+func (c *vaultguardAPIClient) VerifyEmail(ctx context.Context, in *VerifyEmailRequest, opts ...grpc.CallOption) (*VerifyEmailResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(VerifyEmailResponse)
+	err := c.cc.Invoke(ctx, VaultguardAPI_VerifyEmail_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // VaultguardAPIServer is the server API for VaultguardAPI service.
 // All implementations must embed UnimplementedVaultguardAPIServer
 // for forward compatibility.
@@ -78,6 +90,7 @@ type VaultguardAPIServer interface {
 	CreateUser(context.Context, *CreateUserRequest) (*CreateUserResponse, error)
 	UpdateUser(context.Context, *UpdateUserRequest) (*UpdateUserResponse, error)
 	LoginUser(context.Context, *LoginUserRequest) (*LoginUserResponse, error)
+	VerifyEmail(context.Context, *VerifyEmailRequest) (*VerifyEmailResponse, error)
 	mustEmbedUnimplementedVaultguardAPIServer()
 }
 
@@ -96,6 +109,9 @@ func (UnimplementedVaultguardAPIServer) UpdateUser(context.Context, *UpdateUserR
 }
 func (UnimplementedVaultguardAPIServer) LoginUser(context.Context, *LoginUserRequest) (*LoginUserResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method LoginUser not implemented")
+}
+func (UnimplementedVaultguardAPIServer) VerifyEmail(context.Context, *VerifyEmailRequest) (*VerifyEmailResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method VerifyEmail not implemented")
 }
 func (UnimplementedVaultguardAPIServer) mustEmbedUnimplementedVaultguardAPIServer() {}
 func (UnimplementedVaultguardAPIServer) testEmbeddedByValue()                       {}
@@ -172,6 +188,24 @@ func _VaultguardAPI_LoginUser_Handler(srv interface{}, ctx context.Context, dec 
 	return interceptor(ctx, in, info, handler)
 }
 
+func _VaultguardAPI_VerifyEmail_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(VerifyEmailRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(VaultguardAPIServer).VerifyEmail(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: VaultguardAPI_VerifyEmail_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(VaultguardAPIServer).VerifyEmail(ctx, req.(*VerifyEmailRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // VaultguardAPI_ServiceDesc is the grpc.ServiceDesc for VaultguardAPI service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -190,6 +224,10 @@ var VaultguardAPI_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "LoginUser",
 			Handler:    _VaultguardAPI_LoginUser_Handler,
+		},
+		{
+			MethodName: "VerifyEmail",
+			Handler:    _VaultguardAPI_VerifyEmail_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
